@@ -3,8 +3,10 @@
 
 \title{ Get the user directory }
 \description{
+  This function is deprecated in favor of \code{systemDir("user")}!
   \code{Sys.userdir()} retrieves the current user directory.
 }
+
 \usage{
 Sys.userdir()
 }
@@ -12,14 +14,9 @@ Sys.userdir()
 \value{
   A string with the path to the user directory.
 }
+
 \author{ Philippe Grosjean <phgrosjean@sciviews.org> }
 
-\seealso{ \code{\link{Sys.tempdir}} }
-
-\examples{
-Sys.userdir()
-}
+\seealso{ \code{\link{systemDir}} }
 
 \keyword{ utilities }
-
-\concept{ system directories }
